access token added

--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -6,10 +6,10 @@ name: Generate Snake
 
 on:
   schedule:
-      # every hour
+    # every hour
     - cron: "0 */6 * * *"
 
-# This command allows us to run the Action automatically from the Actions tab.
+  # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
 # The sequence of runs in this workflow:
@@ -21,11 +21,10 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      # Checks repo under $GITHUB_WORKSHOP, so your job can access it
       - uses: actions/checkout@v2
 
-    # Generates the snake  
+      # Generates the snake
       - uses: Platane/snk@master
         id: snake-gif
         with:
@@ -34,14 +33,14 @@ jobs:
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      # show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
 
       # Push the changes
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ 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 }}
           branch: master
           force: true
 
@@ -51,4 +50,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ 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 }}
