--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ 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 }}
           branch: master
           force: true
 
@@ -50,4 +50,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ 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 }}
