--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -1,6 +1,6 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
 
-name: Generate Readme Snake
+name: Latest github activity
 
 # Controls when the action will run. This action runs every 6 hours.
 
