github, twitter, youtube

--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -2,7 +2,7 @@ name: Latest github activity
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: "*/30 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -15,3 +15,5 @@ jobs:
       - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          COMMIT_MSG: "Updated Recent Activity"
