--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Pull in dev.to posts
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
-          feed_list: "https://dev.to/feed/montasim, https://noobtrack.blogspot.com/, http://noobtrack.blogspot.com/feeds/posts/default"
+          feed_list: "http://noobtrack.blogspot.com/feeds/posts/default"
