--- a/.github/workflows/twitter-workflow.yml
+++ b/.github/workflows/twitter-workflow.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           comment_tag_name: "TWITTER"
-          feed_list: "https://nitter.net/montasimmamun/rss"
+          feed_list: "https://rss.app/feeds/80sSUoY4prDzLi4p.xml"
           commit_message: "Updated with the latest tweets"
           committer_email: "montasimmamun@gmail.com"
           
