--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,8 +1,9 @@
-name: Update README
+name: Latest GitHub Activity
 
 on:
   schedule:
-    - cron: '0 12 * * *'
+    - cron: '*/30 * * * *'
+  workflow_dispatch:
 
 jobs:
   build:
