cron job once a day

--- a/.github/workflows/snake-workflow.yml
+++ b/.github/workflows/snake-workflow.yml
@@ -7,7 +7,7 @@ name: Latest contribution graph snake activity
 on:
   schedule:
     # every hour
-    - cron: "0 */6 * * *"
+    - cron: "0 0 * * *"
 
   # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
