--- a/.github/workflows/stack-overflow-workflow.yml
+++ b/.github/workflows/stack-overflow-workflow.yml
@@ -2,7 +2,7 @@ name: Latest stack overflow activity
 on:
   schedule:
     # Runs every 5 minutes
-    - cron: "*/5 * * * *"
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
