--- a/.github/workflows/github-readme-guestbook.yml
+++ b/.github/workflows/github-readme-guestbook.yml
@@ -2,7 +2,7 @@ name: GitHub Readme Guestbook
 
 on:
   issues:
-    types: [opened, deleted, edited]
+    types: [opened, closed, reopened, deleted, edited]
 
 jobs:
   update_guestbook:
@@ -16,4 +16,4 @@ jobs:
         uses: muety/readme-guestbook@v1.0.9
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          max_entries: 5
+          max_entries: 10
