--- a/.github/workflows/wakatime-workflow.yml
+++ b/.github/workflows/wakatime-workflow.yml
@@ -1,13 +1,14 @@
-name: Latest wakatime activity
+name: Waka Readme
 
 on:
   workflow_dispatch:
   schedule:
+    # Runs at 00:00AM UTC
     - cron: "0 0 * * *" # runs at every 12AM UTC
 
 jobs:
   update-readme:
-    name: WakaReadme DevMetrics
+    name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
