--- a/.github/workflows/snake-workflow.yml
+++ b/.github/workflows/snake-workflow.yml
@@ -6,8 +6,7 @@ name: Latest contribution graph snake activity
 
 on:
   schedule:
-    # every hour
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *' # Runs at 12:00am everyday
 
   # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
