--- a/.github/workflows/twitter-workflow.yml
+++ b/.github/workflows/twitter-workflow.yml
@@ -1,7 +1,7 @@
 name: Latest Twitter Tweets
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *' # Runs at 12:00am everyday
   workflow_dispatch:
 
 jobs:
