--- a/.github/workflows/twitter-workflow.yml
+++ b/.github/workflows/twitter-workflow.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           comment_tag_name: "TWITTER"
-          feed_list: "https://nitter.net/search/rss?f=tweets&q=montasimmamun"
+          feed_list: "https://nitter.net/search/rss?f=tweets&q=montasimmamun, https://nitter.net/search?f=tweets&q=montasimmamun"
           commit_message: "Updated with the latest tweets"
           committer_email: "montasimmamun@gmail.com"
