--- a/.github/workflows/github-readme-guestbook.yml
+++ b/.github/workflows/github-readme-guestbook.yml
@@ -15,5 +15,5 @@ jobs:
       - name: Update guestbook
         uses: muety/readme-guestbook@v1.0.9
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           max_entries: 10
