--- a/.github/workflows/wakatime-workflow.yml
+++ b/.github/workflows/wakatime-workflow.yml
@@ -17,4 +17,5 @@ jobs:
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
           SHOW_LOC_CHART: "False"
+          SHOW_TITLE : false
           LOCALE: "en"
