--- a/.github/workflows/github-profile-3d-contrib.yml
+++ b/.github/workflows/github-profile-3d-contrib.yml
@@ -2,7 +2,7 @@ name: GitHub-Profile-3D-Contrib
 
 on:
   schedule:
-    - cron: "31 7 * * *"
+    - cron: "0 0 * * *" # runs at every 12AM UTC
   workflow_dispatch:
 
 jobs:
