workflow email updated

--- a/.github/workflows/github-profile-3d-contrib.yml
+++ b/.github/workflows/github-profile-3d-contrib.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Commit & Push
         run: |
           git config user.name ${{ github.repository_owner }}
-          git config user.email jgoel92@gmail.com
+          git config user.email montasimmamun@gmail.com
           git add -A .
           git commit -m "GitHub 3D Profile"
           git push
