[UPDATED] GitHub Readme Guestbook

--- a/.github/workflows/github-readme-guestbook.yml
+++ b/.github/workflows/github-readme-guestbook.yml
@@ -1,29 +1,19 @@
 name: GitHub Readme Guestbook
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  issues:
+    types: [opened, deleted, edited]
 
 jobs:
-  main:
+  update_guestbook:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - uses: ./
-      with:
-        issue: 1
-        approvers: |
-          joshmgross
-        guestbook-path: guestbook.md
-    - name: Update guestbook
-      run: |
-        if [[ `git status --porcelain` ]]; then
-          git config --local user.email "actions@github.com"
-          git config --local user.name "${{ github.actor }}"
-          git add guestbook.md
-          git commit -m "✏ Update guestbook"
-          git push
-        fi
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+      - run: npm install
+      - name: Update guestbook
+        uses: muety/readme-guestbook@v1.0.9
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          max_entries: 5
