--- a/.github/workflows/gitHub-metrics.yml
+++ b/.github/workflows/gitHub-metrics.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Personal metrics
         uses: JayantGoel001/metrics@master
         with:
-          filename: metrics.svg
+          filename: ./media/metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GH_TOKEN }}
           base: "header, activity, community, repositories"
@@ -66,7 +66,7 @@ jobs:
       - name: Personal metrics (detailed)
         uses: JayantGoel001/metrics@master
         with:
-          filename: metrics.detailed.svg
+          filename: ./media/metrics.detailed.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GH_TOKEN }}
           base: "metadata"
