--- a/.github/workflows/snake-workflow.yml
+++ b/.github/workflows/snake-workflow.yml
@@ -1,6 +1,6 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
 
-name: Latest contribution graph snake activity
+name: Latest Contribution Graph Snake Activity
 
 # Controls when the action will run. This action runs every 6 hours.
 
