--- a/.github/workflows/latest-blog-post-workflow.yml
+++ b/.github/workflows/latest-blog-post-workflow.yml
@@ -1,4 +1,4 @@
-name: Latest blog post workflow
+name: Latest Blog Post
 on:
   schedule: # Run workflow automatically
     - cron: '0 0 * * *' # Runs at 12:00am everyday
