--- a/.github/workflows/latest-gitHub-activity.yml
+++ b/.github/workflows/latest-gitHub-activity.yml
@@ -1,20 +1,21 @@
 name: Latest GitHub Activity
-
 on:
   schedule:
     - cron: '0 0 * * *' # Runs at 12:00am everyday
   workflow_dispatch:
-
 jobs:
   build:
-    runs-on: ubuntu-latest
     name: Update this repo's README with recent activity
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: jamesgeorge007/github-activity-readme@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          COMMIT_MSG: 'Specify a custom commit message'
+          COMMIT_MSG: "Updated readme with latest activity"
           MAX_LINES: 10
+          COMMIT_NAME: GitHub Activity Readme
