[UPDATED] workflow trigger time

--- a/.github/workflows/github-profile-3d-contrib.yml
+++ b/.github/workflows/github-profile-3d-contrib.yml
@@ -2,7 +2,7 @@ name: GitHub-Profile-3D-Contrib
 
 on:
   schedule:
-    - cron: "0 0 * * *" # runs at every 12AM UTC
+    - cron: '0 0 * * *' # Runs at 12:00AM UTC everyday
   workflow_dispatch:
 
 jobs:
