--- a/.github/workflows/latest-gitHub-metrics.yml
+++ b/.github/workflows/latest-gitHub-metrics.yml
@@ -1,7 +1,7 @@
 name: Latest GitHub Metrics
 on:
   schedule:
-    - cron: "0 0 * * *" # runs at every 12AM UTC
+    - cron: '0 0 * * *' # Runs at 12:00AM UTC everyday
   workflow_dispatch:
 jobs:
 
