--- a/.github/workflows/latest-gitHub-activity.yml
+++ b/.github/workflows/latest-gitHub-activity.yml
@@ -1,7 +1,7 @@
 name: Latest GitHub Activity
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs at 12:00am everyday
+    - cron: '0 0 * * *' # Runs at 12:00AM UTC everyday
   workflow_dispatch:
 jobs:
   build:
