--- a/.github/workflows/latest-medium-activity.yml
+++ b/.github/workflows/latest-medium-activity.yml
@@ -1,7 +1,7 @@
 name: Latest Medium Activity
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs at 12:00am everyday
+    - cron: '0 0 * * *' # Runs at 12:00AM UTC everyday
   workflow_dispatch:
 permissions:
   contents: write
