--- a/.github/workflows/github-readme-guestbook.yml
+++ b/.github/workflows/github-readme-guestbook.yml
@@ -8,12 +8,8 @@ jobs:
   update_guestbook:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-      - run: npm install
       - name: Update guestbook
         uses: muety/readme-guestbook@v1.0.9
         with:
-          token: ${{ secrets.GH_TOKEN }}
-          max_entries: 10
+          token: ${{ secrets.GITHUB_TOKEN }}
+          max_entries: 5
