--- a/.github/workflows/github-profile-3d-contrib.yml
+++ b/.github/workflows/github-profile-3d-contrib.yml
@@ -5,13 +5,16 @@ on:
     - cron: '0 0 * * *' # Runs at 12:00AM UTC everyday
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     name: generate-github-profile-3d-contrib
     steps:
-      - uses: actions/checkout@v3
-      - uses: yoshi389111/github-profile-3d-contrib@0.7.1
+      - uses: actions/checkout@v4
+      - uses: yoshi389111/github-profile-3d-contrib@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
@@ -20,5 +23,6 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add -A .
-          git commit -m "GitHub 3D Profile Generated"
-          git push
+          if git commit -m "generated"; then
+            git push
+          fi
