--- a/.github/workflows/latest-gitHub-metrics.yml
+++ b/.github/workflows/latest-gitHub-metrics.yml
@@ -3,18 +3,18 @@ on:
   schedule:
     - cron: '0 0 * * *' # Runs at 12:00AM UTC everyday
   workflow_dispatch:
-jobs:
 
+jobs:
   github-metrics-personal:
     runs-on: ubuntu-latest
     steps:
-  
+
       - name: Personal metrics
         uses: JayantGoel001/metrics@master
         with:
           filename: metrics.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: "header, activity, community, repositories"
           plugin_introduction: yes
           plugin_introduction_title: yes
@@ -28,7 +28,7 @@ jobs:
           plugin_habits_from: 200
           plugin_habits_facts: yes
           plugin_habits_charts: yes
-          config_timezone: Asia/Dhaka
+          config_timezone: Asia/Kolkata
           plugin_stars: yes
           plugin_stars_limit: 4
           plugin_stargazers: yes
@@ -37,38 +37,33 @@ jobs:
           plugin_activity_days: 14
           plugin_people: yes
           plugin_people_types: followers, following
-          plugin_people_limit: 600
+          plugin_people_limit: 1000
           plugin_people_size: 28
-          plugin_tweets: yes
-          plugin_tweets_token: ${{ secrets.TWITTER_TOKEN }}
           repositories_forks: yes
-          plugin_skyline: yes
-          plugin_skyline_year: 2022
-          plugin_skyline_frames: 120
           plugin_reactions: yes
           plugin_reactions_limit: 200
           plugin_reactions_days: 14
           plugin_reactions_details: percentage
           plugin_achievements: yes
-          plugin_achievements_threshold: C       
-          plugin_achievements_secrets: yes   
+          plugin_achievements_threshold: C
+          plugin_achievements_secrets: yes
           plugin_achievements_limit: 0
-          plugin_achievements_display: compact   
+          plugin_achievements_display: compact
           plugin_notable: yes
           plugin_tweets_attachments: yes
           plugin_fortune: yes
           plugin_sponsors: yes
           plugin_sponsors_sections: goal, list, about
-    
+
   github-metrics-detailed-personal:
     runs-on: ubuntu-latest
-    steps:      
+    steps:
       - name: Personal metrics (detailed)
         uses: JayantGoel001/metrics@master
         with:
           filename: metrics.detailed.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: "metadata"
           plugin_gists: yes
           plugin_pagespeed: yes
@@ -86,8 +81,8 @@ jobs:
           plugin_posts_descriptions: yes
           plugin_posts_covers: yes
           plugin_posts_user: JayantGoel001
-          config_timezone: Asia/Dhaka
-          plugin_languages_colors : "rainbow"
+          config_timezone: Asia/Kolkata
+          plugin_languages_colors: "rainbow"
           plugin_languages_details: bytes-size, percentage
           plugin_leetcode: yes
           plugin_leetcode_sections: solved, skills, recent
