feat: fix latest-gitHub-metrics workflow

--- a/.github/workflows/latest-gitHub-metrics.yml
+++ b/.github/workflows/latest-gitHub-metrics.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
 
       - name: Personal metrics
-        uses: JayantGoel001/metrics@master
+        uses: montasim/metrics@master
         with:
           filename: metrics.svg
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -28,7 +28,7 @@ jobs:
           plugin_habits_from: 200
           plugin_habits_facts: yes
           plugin_habits_charts: yes
-          config_timezone: Asia/Kolkata
+          config_timezone: Asia/Dhaka
           plugin_stars: yes
           plugin_stars_limit: 4
           plugin_stargazers: yes
@@ -59,7 +59,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Personal metrics (detailed)
-        uses: JayantGoel001/metrics@master
+        uses: montasim/metrics@master
         with:
           filename: metrics.detailed.svg
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -80,8 +80,8 @@ jobs:
           plugin_posts_limit: 2
           plugin_posts_descriptions: yes
           plugin_posts_covers: yes
-          plugin_posts_user: JayantGoel001
-          config_timezone: Asia/Kolkata
+          plugin_posts_user: montasim
+          config_timezone: Asia/Dhaka
           plugin_languages_colors: "rainbow"
           plugin_languages_details: bytes-size, percentage
           plugin_leetcode: yes
