feat: update workflow schedule

--- a/.github/workflows/github-profile-3d-contrib.yml
+++ b/.github/workflows/github-profile-3d-contrib.yml
@@ -2,7 +2,7 @@ name: GitHub-Profile-3D-Contrib
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs at 12:00AM UTC everyday
+    - cron: '0 0 1-31/3 * *' # Every 3rd day of the month at 12:00AM UTC
   workflow_dispatch:
 
 permissions:
