--- a/.github/workflows/latest-blog-post.yml
+++ b/.github/workflows/latest-blog-post.yml
@@ -1,7 +1,7 @@
 name: Latest Blog Post
 on:
   schedule: # Run workflow automatically
-  - cron: '0 0 * * *' # Runs at 12:00AM UTC everyday
+    - cron: '0 0 1-31/3 * *' # Every 3rd day of the month at 12:00AM UTC
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the GitHub Actions Workflow page directly
 permissions:
   contents: write # To write the generated contents to the readme
