--- a/.github/workflows/latest-stackoverflow-activity.yml
+++ b/.github/workflows/latest-stackoverflow-activity.yml
@@ -1,7 +1,7 @@
 name: Latest StackOverflow Activity
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs at 12:00AM UTC everyday
+    - cron: '0 0 1-31/3 * *' # Every 3rd day of the month at 12:00AM UTC
   workflow_dispatch:
 
 jobs:
